src/less/_global.less
html {
  min-height: 100%;
}


body {
  //overflow: hidden;
  //min-height: 600px;
//              url("../img/bg_rev.jpg") bottom transparent;
  background-color: #000;

  .page-header{
    border-bottom: 1px solid @gray-dark;
  }

  .wrap {
    z-index: 5;
    margin-top: 75px;

    .container {
      display: none;

      .title-block {
        position: relative;
        //width: 80%;
        margin: 0 auto;
        height: 65px;
        line-height: 65px;
        display: none;
        text-align: center;

        > * {
          display: inline-block;
          //.trans;
        }

        svg {
          //padding-top: 4px;
          stroke: @brand-info;
          stroke-width: 3px;
          display: inline-block;
          height: 4px;
          width: 100%;
          position: absolute;
          left: 0;
          top: 30px;
          z-index: -1;

          @media (min-width: @screen-sm-min) {
            //width: 600px;
          }
        }

        .title-hr {
          stroke: @brand-success;
          stroke-width: 3px;
        }

        h2 {
          font-size: 16px;
          font-family: orbitron;
          padding: 0 10px;
          margin: 0;
          display: inline-block;
          background-color: #000;

          @media (min-width: @screen-sm-min) {
            font-size: 24px;
          }

          > * {
            .trans;
          }
        }
      }
    }
  }

  #loader-wrap {
    width: 200px;
    .centered;

    .loader-path {
      .trans();
      stroke: @brand-primary;
      stroke-width: 50px;
    }
  }


}

body.home {
  //overflow: hidden;
}

